force-app/main/default/objects/ER_Store__c/fields/Account_Partner_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Partner_Code__c</fullName>
    <formula>ER_Merchant__r.Partner_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant Partner Code</label>
    <type>Text</type>
</CustomField>