force-app/main/default/objects/ER_Store__c/fields/AT_Category__c.field-meta.xml
<CustomField>
    <fullName>AT_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Essen &amp; Ernährung</fullName>
                <default>true</default>
                <label>Essen &amp; Ernährung</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>