force-app/main/default/objects/ER_Store__c/fields/AT_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>AT_Close_Date__c</fullName>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>