force-app/main/default/objects/ER_Store__c/fields/AT_External_Store_ID__c.field-meta.xml
<CustomField>
    <fullName>AT_External_Store_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Store ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>