force-app/main/default/objects/ER_Store__c/fields/AT_Food_Program__c.field-meta.xml
<CustomField>
    <fullName>AT_Food_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FOOD</label>
    <type>Checkbox</type>
</CustomField>