force-app/main/default/objects/ER_Store__c/fields/AT_LieferService__c.field-meta.xml
<CustomField>
    <fullName>AT_LieferService__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LieferService</label>
    <type>Checkbox</type>
</CustomField>