force-app/main/default/objects/ER_Store__c/fields/AT_LieferService_Area__c.field-meta.xml
<CustomField>
    <fullName>AT_LieferService_Area__c</fullName>
    <label>LieferService Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>