force-app/main/default/objects/ER_Store__c/fields/AT_Lieferservice_Payment__c.field-meta.xml
<CustomField>
    <fullName>AT_Lieferservice_Payment__c</fullName>
    <label>Lieferservice Payment On Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voucher only</fullName>
            </value>
            <value>
                <fullName>Card only</fullName>
            </value>
            <value>
                <fullName>Voucher+Card</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>