force-app/main/default/objects/ER_Store__c/fields/AT_Phone__c.field-meta.xml
<CustomField>
    <fullName>AT_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>