force-app/main/default/objects/ER_Store__c/fields/AT_Shopping_Center__c.field-meta.xml
<CustomField>
    <fullName>AT_Shopping_Center__c</fullName>
    <label>Shopping Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auhofcenter</fullName>
            </value>
            <value>
                <fullName>Bahnhof City Wien Hauptbahnhof</fullName>
            </value>
            <value>
                <fullName>Bahnhof City Wien West</fullName>
            </value>
            <value>
                <fullName>Citygate</fullName>
            </value>
            <value>
                <fullName>Citypark</fullName>
            </value>
            <value>
                <fullName>Designer Outlet Parndorf</fullName>
            </value>
            <value>
                <fullName>DEZ</fullName>
            </value>
            <value>
                <fullName>Donau Plex</fullName>
            </value>
            <value>
                <fullName>Donau Zentrum</fullName>
            </value>
            <value>
                <fullName>Einkaufszentrum Hernals</fullName>
            </value>
            <value>
                <fullName>Europark</fullName>
            </value>
            <value>
                <fullName>Fischapark</fullName>
            </value>
            <value>
                <fullName>FMZ Imst</fullName>
            </value>
            <value>
                <fullName>Forum 1</fullName>
            </value>
            <value>
                <fullName>G3 Shopping Resort Gerasdorf</fullName>
            </value>
            <value>
                <fullName>Gerngross</fullName>
            </value>
            <value>
                <fullName>Lentia City (Linz)</fullName>
            </value>
            <value>
                <fullName>Lugner City</fullName>
            </value>
            <value>
                <fullName>Merkur City</fullName>
            </value>
            <value>
                <fullName>Messepark</fullName>
            </value>
            <value>
                <fullName>Millennium City</fullName>
            </value>
            <value>
                <fullName>Murpark</fullName>
            </value>
            <value>
                <fullName>Passage Linz</fullName>
            </value>
            <value>
                <fullName>Plus City</fullName>
            </value>
            <value>
                <fullName>Shopping City Seiersberg</fullName>
            </value>
            <value>
                <fullName>Shopping City Süd</fullName>
            </value>
            <value>
                <fullName>Traisenpark</fullName>
            </value>
            <value>
                <fullName>Vienna Twin Tower</fullName>
            </value>
            <value>
                <fullName>Wien Mitte The Mall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>