force-app/main/default/objects/ER_Store__c/fields/AT_Status__c.field-meta.xml
<CustomField>
    <fullName>AT_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>X-Directory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>