force-app/main/default/objects/ER_Store__c/fields/AT_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>AT_Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AT_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baumärkte</fullName>
            </value>
            <value>
                <fullName>Bekleidung</fullName>
            </value>
            <value>
                <fullName>Bio-Markt/Reformhaus</fullName>
            </value>
            <value>
                <fullName>Buchhandel</fullName>
            </value>
            <value>
                <fullName>Büroartikel</fullName>
            </value>
            <value>
                <fullName>Café &amp; Bäckerei</fullName>
            </value>
            <value>
                <fullName>Drogerie &amp; Pafümerie</fullName>
            </value>
            <value>
                <fullName>Elektronik</fullName>
            </value>
            <value>
                <fullName>Erlebnis &amp; Reisen</fullName>
            </value>
            <value>
                <fullName>Ernährungsprogramme</fullName>
            </value>
            <value>
                <fullName>Fast Food</fullName>
            </value>
            <value>
                <fullName>Feinkost &amp; Spezialitäten</fullName>
            </value>
            <value>
                <fullName>Fitnesscenter</fullName>
            </value>
            <value>
                <fullName>Haushaltswaren</fullName>
            </value>
            <value>
                <fullName>Imbiss &amp; Buffets</fullName>
            </value>
            <value>
                <fullName>Kfz Händler/Reparatur</fullName>
            </value>
            <value>
                <fullName>Kino</fullName>
            </value>
            <value>
                <fullName>Lieferdienste</fullName>
            </value>
            <value>
                <fullName>Metzgerei/Fleischerei</fullName>
            </value>
            <value>
                <fullName>Mietwagenservice</fullName>
            </value>
            <value>
                <fullName>Möbelhäuser</fullName>
            </value>
            <value>
                <fullName>Optiker</fullName>
            </value>
            <value>
                <fullName>Psychotherapeut</fullName>
            </value>
            <value>
                <fullName>Restaurants</fullName>
            </value>
            <value>
                <fullName>Schmuck</fullName>
            </value>
            <value>
                <fullName>Schuhmode</fullName>
            </value>
            <value>
                <fullName>Skigebiete</fullName>
            </value>
            <value>
                <fullName>Spielwaren &amp; Geschenkartikel</fullName>
            </value>
            <value>
                <fullName>Sportartikelanbieter</fullName>
            </value>
            <value>
                <fullName>Supermarkt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>