force-app/main/default/objects/ER_Store__c/fields/ER_Country__c.field-meta.xml
<CustomField>
    <fullName>ER_Country__c</fullName>
    <defaultValue>&quot;Austria&quot;</defaultValue>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>