force-app/main/default/objects/ER_Store__c/fields/ER_Merchant__c.field-meta.xml
<CustomField>
    <fullName>ER_Merchant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stores</relationshipLabel>
    <relationshipName>Stores</relationshipName>
    <type>Lookup</type>
</CustomField>