force-app/main/default/objects/ER_Store__c/fields/ER_Street__c.field-meta.xml
<CustomField>
    <fullName>ER_Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>