force-app/main/default/objects/ER_Store__c/fields/ER_Type__c.field-meta.xml
<CustomField>
    <fullName>ER_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pizzeria</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Snack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>