force-app/main/default/objects/ER_Store__c/fields/ER_VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>ER_VAT_Number__c</fullName>
    <label>VAT Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>