force-app/main/default/objects/ER_Store__c/fields/ERAT_MIDs__c.field-meta.xml
<CustomField>
    <fullName>ERAT_MIDs__c</fullName>
    <label>MIDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>