force-app/main/default/objects/ER_Store__c/fields/LengthPPSStoreName__c.field-meta.xml
<CustomField>
    <fullName>LengthPPSStoreName__c</fullName>
    <formula>LEN( PPSStoreName__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length PPS Store Name</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>