force-app/main/default/objects/ER_Store__c/fields/PPSStoreName__c.field-meta.xml
<CustomField>
    <fullName>PPSStoreName__c</fullName>
    <formula>Name  &amp; &quot; &quot; &amp;  ER_Street__c &amp; &quot; &quot; &amp; Zip_Code__c &amp; &quot; &quot;&amp; ER_City__c</formula>
    <label>PPS Store Name</label>
    <type>Text</type>
</CustomField>