force-app/main/default/objects/ER_Store__c/fields/Store_Information__c.field-meta.xml
<CustomField>
    <fullName>Store_Information__c</fullName>
    <label>Store Information</label>
    <length>250</length>
    <type>Text</type>
</CustomField>