force-app/main/default/objects/ER_Store__c/fields/Total_Amount_of_MID__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_MID__c</fullName>
    <label>Total Amount of MID</label>
    <summaryForeignKey>ER_Acceptor__c.ER_Store__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>