force-app/main/default/objects/ER_Store__c/fields/X18_Digit_SF_ID_Store__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_SF_ID_Store__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>18 Digit SF ID Store</label>
    <type>Text</type>
</CustomField>