force-app/main/default/objects/ER_Store__c/validationRules/NoDoubleSemicolons.validationRule-meta.xml
<ValidationRule>
    <fullName>NoDoubleSemicolons</fullName>
    <active>true</active>
    <errorConditionFormula>FIND(&quot;;;&quot;,  ERAT_MIDs__c) &lt;&gt; 0</errorConditionFormula>
    <errorDisplayField>ERAT_MIDs__c</errorDisplayField>
    <errorMessage>Check the acceptors please</errorMessage>
</ValidationRule>