force-app/main/default/objects/ER_Store__c/validationRules/PPSStoreNameLength.validationRule-meta.xml
<ValidationRule>
    <fullName>PPSStoreNameLength</fullName>
    <active>true</active>
    <description>PPS Store Name Length max. 100 Characters</description>
    <errorConditionFormula>LEN( PPSStoreName__c ) &gt; 100</errorConditionFormula>
    <errorMessage>The combination Store Name, Street, ZIP, and City is too long for PPS. Only 100 characters are allowed.</errorMessage>
</ValidationRule>