force-app/main/default/objects/ER_Store__c/validationRules/VRAT01_Store_LieferService.validationRule-meta.xml
<ValidationRule>
    <fullName>VRAT01_Store_LieferService</fullName>
    <active>true</active>
    <description>This rule controles that the lieferservice fields are filled in when the checkbox LieferService is ticked</description>
    <errorConditionFormula>AND(
 (AT_LieferService__c = true),
OR(
ISBLANK( AT_LieferService_Area__c ),
ISPICKVAL( AT_Lieferservice_Payment__c,&apos;&apos;),
ISPICKVAL( AT_Lieferservice_Payment_Online__c ,&apos;&apos;)))</errorConditionFormula>
    <errorMessage>The information about Lieferservice are mandatories when the field Lieferservice is ticked.</errorMessage>
</ValidationRule>