force-app/main/default/objects/ER_Store__c/validationRules/VRAT02_LiferServiceArea_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>VRAT02_LiferServiceArea_mandatory</fullName>
    <active>true</active>
    <description>This rule controls that the LieferService area field is filled in when the field Lieferservice is ticked</description>
    <errorConditionFormula>AND(
 AT_LieferService__c = TRUE,
ISBLANK( AT_LieferService_Area__c ))</errorConditionFormula>
    <errorDisplayField>AT_LieferService_Area__c</errorDisplayField>
    <errorMessage>The field LieferService Area is mandatory when LieferService is ticked.</errorMessage>
</ValidationRule>