force-app/main/default/objects/ER_Store__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ER_City__c</columns>
    <columns>ER_Merchant__c</columns>
    <columns>ER_Type__c</columns>
    <columns>ER_VAT_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Partner_Code__c</field>
        <operation>notEqual</operation>
        <value>20056</value>
    </filters>
    <filters>
        <field>ER_City__c</field>
        <operation>equals</operation>
        <value>Wien</value>
    </filters>
    <filters>
        <field>AT_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All</label>
</ListView>